# SecondBrain

./: .env.example  .gitignore  LICENSE  README.md  check.sh  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  pyproject.toml
backend/src/second_brain/: git_sync.py  mcp_server.py
backend/src/second_brain/agent/: __init__.py  edit_vault.py  operations.py
backend/src/second_brain/core/: celery_app.py  config.py  telemetry.py
backend/src/second_brain/llm/: base.py  client.py  embedder.py  provider.py  wiki_writer.py
backend/src/second_brain/llm/providers/gcp/: __init__.py  client.py  embedder.py
backend/src/second_brain/llm/providers/openrouter/: __init__.py  client.py  embedder.py  routing.py
backend/src/second_brain/memory/: graph.py  hybrid_rag.py  indexing.py  vault.py  vector.py
backend/src/second_brain/worker/: tasks.py
backend/tests/: conftest.py  test_edit_vault.py  test_git_sync.py  test_graph.py  test_hybrid_rag.py  test_indexing.py  test_mcp_tools.py  test_operations.py  test_vault.py  test_vector.py
backend/tests/integration/: test_e2e_memory.py
documentation/: local_developement.md  vision.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
